# ASimpleRTCServer

./: README.md  a.java  b.java  proguard-project.txt
assets/: ShareSDK.xml  deal.txt  private.txt
proguard/: mapping.txt  seeds.txt  usage.txt
res/anim/: in_left.xml  in_right.xml  out_left.xml  out_right.xml  push_left_in.xml  push_left_out.xml
res/drawable/: bg_special_disease_circle.xml  bg_special_disease_circle_yellow.xml  bg_tracker_item.xml  button_bg.xml  button_bg_yellow.xml  sidebar_background.xml
res/layout/: activity_about.xml  activity_add_friends.xml  activity_add_new_tracker.xml  activity_address_info.xml  activity_before_tracking.xml  activity_connection_state.xml  activity_connection_state_no.xml  activity_edit_user_info.xml  activity_edit_user_name.xml  activity_forget_password.xml  activity_geometry.xml  activity_group_member_item.xml  activity_guide.xml  activity_image_bucket.xml  activity_image_grid.xml  activity_location.xml  activity_location_note.xml  activity_login.xml  activity_main.xml  activity_opengl.xml  activity_private_deal.xml  activity_published.xml  activity_question.xml  activity_regist.xml  activity_reset_password.xml  activity_safity_area.xml  activity_searched_help_item.xml  activity_searched_help_item_copy.xml  activity_searched_message.xml  comment.xml  (+32 more)
simple_build/: BUILD.gn  channel_member.cc  channel_member.h  data_socket.cc  data_socket.h  hello.cc  listening_socket.cc  listening_socket.h  main.cc  peer_channel.cc  peer_channel.h  socket_base.cc  socket_base.h  utils.cc  utils.h
simple_build/tutorial/: BUILD.gn
(+124 files in other folders)
