# Copyright 2014 The Chromium Authors. All rights reserved.
# Use of this source code is governed by a BSD-style license that can be
# found in the LICENSE file.

executable("server") {
  sources = [ 
    "main.cc",
    "socket_base.cc",
    "data_socket.cc",
    "listening_socket.cc",
    "utils.cc",
    "channel_member.cc",
    "peer_channel.cc"
  ]

  deps = [
    ":hello_shared",
    ":hello_static",
  ]
}

group("tools") {
  deps = [
    # This will expand to the name "//tutorial:tutorial" which is the full name
    # of our new target. Run "gn help labels" for more.
    "//tutorial",
  ]
}

shared_library("hello_shared") {
  sources = [
    "hello_shared.cc",
    "hello_shared.h",
  ]

  defines = [ "HELLO_SHARED_IMPLEMENTATION" ]
}

static_library("hello_static") {
  sources = [
    "hello_static.cc",
    "hello_static.h",
  ]
}
